# BASE

./: README.md  get.sh
CODE/BOOL/: bool_8.hpp
CODE/CHAR/: char_16.hpp  char_8.hpp
CODE/COUNTED/: counted.cpp  counted.hpp  counted_block.hpp  counted_block_state.hpp  link_.hpp  ref_.hpp
CODE/DEBUG/: debug.hpp
CODE/INT/: int_16.hpp  int_32.hpp  int_64.hpp  int_8.hpp
CODE/NATIVE/: list_.hpp  map_.hpp  native.hpp  vector_.hpp
CODE/REAL/: real_32.hpp  real_32_box.hpp  real_32_matrix_12.cpp  real_32_matrix_12.hpp  real_32_matrix_16.cpp  real_32_matrix_16.hpp  real_32_matrix_9.cpp  real_32_matrix_9.hpp  real_32_quaternion.cpp  real_32_quaternion.hpp  real_32_quaternion_test.hpp  real_32_vector_3.cpp  real_32_vector_3.hpp  real_32_vector_4.hpp  real_64.hpp  real_64_box.hpp  real_64_matrix_12.cpp  real_64_matrix_12.hpp  real_64_matrix_16.cpp  real_64_matrix_16.hpp  real_64_matrix_9.cpp  real_64_matrix_9.hpp  real_64_quaternion.cpp  real_64_quaternion.hpp  real_64_quaternion_test.hpp  real_64_vector_3.cpp  real_64_vector_3.hpp  real_64_vector_4.hpp
CODE/STREAMED/: streamed.hpp  streamed_file.hpp  streamed_input.hpp  streamed_output.hpp
CODE/STRING/: string_16.hpp  string_8.hpp
CODE/UINT/: uint_16.hpp  uint_32.hpp  uint_64.hpp  uint_8.hpp
CODE/VOID/: void.hpp
TEST/: .gitignore  CMakeLists.txt  debug.sh  inclean.sh  make.sh  prettify.sh  run.sh
TEST/CODE/: base_test.cpp
